42d2975e-655e-44e5-b3fe-f3da43d1d296/171233f6-e0a9-4776-9512-c0b8a118df0f/c5f298c6-06cb-40c3-a751-c5f652137c18/graph-1d17b803-4b18-48a3-b0f7-ed6e46eb9b47/kubernates/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress-c5f298c6-06cb-40c3-a751-c5f652137c18
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: rest-app-c5f298c6-06cb-40c3-a751-c5f652137c18
spec:
  ingressClassName: ngrok
  rules:
    - host: honestly-handy-herring.ngrok-free.app
      http:
        paths:
          - path: /febe-rest-c5f298c6-06cb-40c3-a751-c5f652137c18/
            pathType: Prefix
            backend:
              service:
                name: rest-service-c5f298c6-06cb-40c3-a751-c5f652137c18
                port:
                  number: 80
